[package]
name = "sandbags-bpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "9cdae8126573e598284f7dc3f6fff2f97a48cc02" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "9cdae8126573e598284f7dc3f6fff2f97a48cc02" }
# flycast-common = { path = "../flycast-common" }
memoffset = "0.6.5"

[[bin]]
name = "sandbags"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1


[workspace]
members = []